--- a/TraceIt/Views/SelectedStandardsPage.xaml
+++ b/TraceIt/Views/SelectedStandardsPage.xaml
@@ -6,6 +6,7 @@
              xmlns:Button="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms" 
              xmlns:xforms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              xmlns:viewmodels="clr-namespace:TraceIt.ViewModels"
+             xmlns:converters="clr-namespace:TraceIt.Converters"
              mc:Ignorable="d"
              x:Class="TraceIt.Views.StandardSelectionPage"
              Title="Smart English"
@@ -26,6 +27,9 @@
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
                 <Setter Property="FontSize" Value="17"/>
             </Style>
+
+            <converters:GradeEnumToLetterConverter x:Key="gradeConverter"/>
+
         </ResourceDictionary>
     </ContentPage.Resources>
 
@@ -52,7 +56,7 @@
                             <Frame Style="{DynamicResource listItemFrame}" Padding="0">
                                 <AbsoluteLayout HeightRequest="135">
 
-                                    <Label Text="{Binding Subject_Reference}"
+                                    <Label Text="{Binding SubjectReference}"
                                            HorizontalTextAlignment="Start"
                                            AbsoluteLayout.LayoutFlags="All"
                                            AbsoluteLayout.LayoutBounds="0.5, 0.1, 0.9, 0.2"
@@ -68,7 +72,22 @@
                                            AbsoluteLayout.LayoutFlags="All"
                                            AbsoluteLayout.LayoutBounds="0.55, 0.65, 0.9, 0.2"/>
 
-                                    <Button:SfButton Text="More" CornerRadius="30"
+                                    <Button x:Name="selectGradeButton" Text="{Binding GoalGrade, Converter={StaticResource gradeConverter}}"
+                                            TextColor="Black" FontAttributes="Bold" FontSize="Large"
+                                            AbsoluteLayout.LayoutFlags="All"
+                                            AbsoluteLayout.LayoutBounds="0.95, 0.40, 0.2, 0.3" 
+                                            Clicked="selectGradeButton_Clicked">
+                                        <Button.Background>
+                                            <LinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
+                                                <LinearGradientBrush.GradientStops>
+                                                    <GradientStop Color="#FFC400" Offset="0"/>
+                                                    <GradientStop Color="#FFA200" Offset="1"/>
+                                                </LinearGradientBrush.GradientStops>
+                                            </LinearGradientBrush>
+                                        </Button.Background>
+                                    </Button>
+
+                                        <Button:SfButton Text="More" CornerRadius="30"
                                                      TextColor="Black"
                                                      FontAttributes="Bold"
                                                      FontSize="17"
@@ -77,12 +96,6 @@
                                                      AbsoluteLayout.LayoutBounds="0.95, 0.85, 0.3, 0.3"
                                                      Clicked="buttonViewMore_Clicked"
                                                      Style="{DynamicResource subjectButtonGradient}"/>
-
-                                    <Button x:Name="selectGradeButton" Text="Select grade" 
-                                            AbsoluteLayout.LayoutFlags="All"
-                                            AbsoluteLayout.LayoutBounds="0.95, 0.40, 0.2, 0.3" 
-                                            Clicked="selectGradeButton_Clicked"
-                                            BackgroundColor="Yellow"/>
 
                                 </AbsoluteLayout>
                             </Frame>
