--- a/TraceIt/Views/GradeSelectionPage.xaml
+++ b/TraceIt/Views/GradeSelectionPage.xaml
@@ -23,6 +23,7 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="buttons:SfSegmentedControl">
+                <Setter Property="BindingContext" Value="{Binding Standard}"/>
                 <Setter Property="BackgroundColor" Value="Transparent"/>
                 <Setter Property="CornerRadius" Value="10"/>
                 <Setter Property="BorderColor" Value="Transparent"/>
@@ -63,7 +64,7 @@
                     <Grid RowDefinitions="140, 140, 140" VerticalOptions="CenterAndExpand">
                         <StackLayout Grid.Row="0" HorizontalOptions="Center">
                             <Label Text="Goal Grade" TextColor="White" FontAttributes="Bold"/>
-                            <buttons:SfSegmentedControl x:Name="goalGradeSelector" BindingContext="{Binding Standard}"
+                            <buttons:SfSegmentedControl x:Name="goalGradeSelector"
                                                         SelectedIndex="{Binding 
                                                                         GoalGrade, 
                                                                         Converter={StaticResource indexConverter},
@@ -79,7 +80,11 @@
 
                         <StackLayout Grid.Row="1" HorizontalOptions="Center">
                             <Label Text="Practice Grade" TextColor="White" FontAttributes="Bold"/>
-                            <buttons:SfSegmentedControl x:Name="practiceGradeSelector">
+                            <buttons:SfSegmentedControl x:Name="practiceGradeSelector"
+                                                        SelectedIndex="{Binding 
+                                                                        PracticeGrade, 
+                                                                        Converter={StaticResource indexConverter},
+                                                                        Mode=TwoWay}">
                                 <system:List x:TypeArguments="x:String">
                                     <x:String>Not Achieved</x:String>
                                     <x:String>Achieved</x:String>
@@ -91,7 +96,11 @@
 
                         <StackLayout Grid.Row="2" HorizontalOptions="Center">
                             <Label Text="Final Grade" TextColor="White" FontAttributes="Bold"/>
-                            <buttons:SfSegmentedControl x:Name="finalGradeSelector" >
+                            <buttons:SfSegmentedControl x:Name="finalGradeSelector"
+                                                        SelectedIndex="{Binding 
+                                                                        FinalGrade, 
+                                                                        Converter={StaticResource indexConverter},
+                                                                        Mode=TwoWay}">
                                 <system:List x:TypeArguments="x:String">
                                     <x:String>Not Achieved</x:String>
                                     <x:String>Achieved</x:String>
