--- a/TraceIt/Views/SelectedStandardsPage.xaml
+++ b/TraceIt/Views/SelectedStandardsPage.xaml
@@ -72,7 +72,7 @@
                                            AbsoluteLayout.LayoutFlags="All"
                                            AbsoluteLayout.LayoutBounds="0.55, 0.65, 0.9, 0.2"/>
 
-                                    <Button x:Name="selectGradeButton" Text="{Binding GoalGrade, Converter={StaticResource gradeConverter}}"
+                                    <Button x:Name="selectGradeButton" Text="{Binding FinalGrade, Converter={StaticResource gradeConverter}}"
                                             TextColor="Black" FontAttributes="Bold" FontSize="Large"
                                             AbsoluteLayout.LayoutFlags="All"
                                             AbsoluteLayout.LayoutBounds="0.95, 0.40, 0.2, 0.3" 
